@@ -23,6 +23,7 @@ SphereSim 3.0.4:
 * Switched to publish/subscribe sockets.
 * Moved message sending logic to ActionServer.
 * Implemented ClientID connections.
+* Fixed type of server status.
 
 SphereSim 3.0.3:
 * Removed custom Array class, replaced by std::vector.
